--- a/index.html
+++ b/index.html
@@ -5,18 +5,103 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Cup</title>
+
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/fa27bc392d.js" crossorigin="anonymous"></script>
+
     <!-- My Css -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
-      <h1>header</h1>
+      <!-- Banner section -->
+      <section>
+        <div class="banner">
+          <div class="text-part">
+            <h1>The Greatest show on the earth</h1>
+            <p>As of the 2022 FIFA World Cup, 22 final tournaments have been held and a total of 80 national teams have competed. The trophy has been won by eight national.</p>
+            <a class="red-btn" href="#">Watch Live <i class="fa-solid fa-greater-than"></i></a>
+          </div>
+          <div class="image-part">
+            <img src="./images/banner-messi.png" alt="Messi banner image" />
+          </div>
+        </div>
+      </section>
     </header>
 
     <main>
-      <h1>Main</h1>
+      <!-- Blog section -->
+      <section>
+        <div class="blog-section">
+          <div class="navigation">
+            <a class="white-btn" href="./matches.html">Upcoming Match</a>
+            <a class="white-btn" href="#">All Groups</a>
+            <a class="red-btn" href="./index.html">Blogs</a>
+          </div>
+          <div class="blogs">
+            <div class="blog">
+              <img src="./images/blog1-messi.png" alt="" />
+              <div class="blog-details">
+                <a class="white-btn" href="#">World Cup</a>
+                <h3>The Goat debate is over. Messi is the greatest of all time</h3>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-heart"></i> 70</span>
+                <span><i class="fa-regular fa-comment"></i> 23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="./images/blog2-argentina-copa.png" alt="" />
+              <div class="blog-details">
+                <a class="white-btn" href="#">Copa America</a>
+                <h3>Argentina wins the copa america. Messi is the greatest of all time</h3>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-heart"></i> 70</span>
+                <span><i class="fa-regular fa-comment"></i> 23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="./images/blog3-argentina-wc.jpg" alt="" />
+              <div class="blog-details">
+                <a class="white-btn" href="#">World Cup</a>
+                <h3>Argentina won the world cup 2022. Messi is the greatest of all time</h3>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-heart"></i> 70</span>
+                <span><i class="fa-regular fa-comment"></i> 23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="./images/blog1-messi.png" alt="" />
+              <div class="blog-details">
+                <a class="white-btn" href="#">World Cup</a>
+                <h3>The Goat debate is over. Messi is the greatest of all time</h3>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-heart"></i> 70</span>
+                <span><i class="fa-regular fa-comment"></i> 23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="./images/blog2-argentina-copa.png" alt="" />
+              <div class="blog-details">
+                <a class="white-btn" href="#">Copa America</a>
+                <h3>Argentina wins the copa america. Messi is the greatest of all time</h3>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-heart"></i> 70</span>
+                <span><i class="fa-regular fa-comment"></i> 23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="./images/blog3-argentina-wc.jpg" alt="" />
+              <div class="blog-details">
+                <a class="white-btn" href="#">World Cup</a>
+                <h3>Argentina won the world cup 2022. Messi is the greatest of all time</h3>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-heart"></i> 70</span>
+                <span><i class="fa-regular fa-comment"></i> 23</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
