--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Cup</title>
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/fa27bc392d.js" crossorigin="anonymous"></script>
 
@@ -52,7 +54,27 @@
             <div class="blog">
               <img src="./images/blog2-argentina-copa.png" alt="" />
               <div class="blog-details">
-                <a class="white-btn" href="#">Copa America</a>
+                <a class="white-btn" href="#">Copa</a>
+                <h3>Argentina wins the copa america. Messi is the greatest of all time</h3>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-heart"></i> 70</span>
+                <span><i class="fa-regular fa-comment"></i> 23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="./images/blog3-argentina-wc.jpg" alt="" />
+              <div class="blog-details">
+                <a class="white-btn" href="#">World Cup</a>
+                <h3>Argentina won the world cup 2022. Messi is the greatest of all time</h3>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-heart"></i> 70</span>
+                <span><i class="fa-regular fa-comment"></i> 23</span>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="./images/blog2-argentina-copa.png" alt="" />
+              <div class="blog-details">
+                <a class="white-btn" href="#">Copa</a>
                 <h3>Argentina wins the copa america. Messi is the greatest of all time</h3>
                 <span><i class="fa-regular fa-clock"></i> 10h</span>
                 <span><i class="fa-regular fa-heart"></i> 70</span>
@@ -80,9 +102,19 @@
               </div>
             </div>
             <div class="blog">
+              <img src="./images/blog1-messi.png" alt="" />
+              <div class="blog-details">
+                <a class="white-btn" href="#">World Cup</a>
+                <h3>The Goat debate is over. Messi is the greatest of all time</h3>
+                <span><i class="fa-regular fa-clock"></i> 10h</span>
+                <span><i class="fa-regular fa-heart"></i> 70</span>
+                <span><i class="fa-regular fa-comment"></i> 23</span>
+              </div>
+            </div>
+            <div class="blog">
               <img src="./images/blog2-argentina-copa.png" alt="" />
               <div class="blog-details">
-                <a class="white-btn" href="#">Copa America</a>
+                <a class="white-btn" href="#">Copa</a>
                 <h3>Argentina wins the copa america. Messi is the greatest of all time</h3>
                 <span><i class="fa-regular fa-clock"></i> 10h</span>
                 <span><i class="fa-regular fa-heart"></i> 70</span>
@@ -100,12 +132,27 @@
               </div>
             </div>
           </div>
+          <a class="red-btn view-all" href="#">View All</a>
         </div>
       </section>
     </main>
 
     <footer>
-      <h1>footer</h1>
+      <h1>Goal</h1>
+      <div class="social-media">
+        <a target="_blank" href="https://www.facebook.com/arifulsajib347/"><i class="fa-brands fa-square-facebook"></i></a>
+        <a target="_blank" href="https://www.instagram.com/arifulsajib347/"><i class="fa-brands fa-square-instagram"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/arifulsajib/"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+      <hr />
+      <div class="footer-nav">
+        <a href="#">Contact Us</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Privacy Setup</a>
+        <a href="#">Terms of Service</a>
+        <a href="#">Goal App</a>
+        <a href="#">Goal Live</a>
+      </div>
     </footer>
   </body>
 </html>
